--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,3 +1,8 @@
+@import url('https://fonts.googleapis.com/css?family=Anton');
+* {
+  font-family: 'Anton', sans-serif;
+}
+
 body {
   background-color: #1b1a1a !important;
 }
