add new page show github

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -6,3 +6,67 @@
 body {
   background-color: #1b1a1a !important;
 }
+
+.random-color {
+  color: #f1c40f;
+ -webkit-animation: color 5s ease-in  0s infinite alternate running;
+ -moz-animation: color 5s linear  0s infinite alternate running;
+  animation: color 5s linear  0s infinite alternate running;
+}
+@-webkit-keyframes color {
+   0% { color: #f1c40f; }
+   32% { color: #e74c3c; }
+   55% { color: #9b59b6; }
+   76% { color: #16a085; }
+   100% { color: #2ecc71; }
+}
+@-moz-keyframes color {
+    0% { color: #f1c40f; }
+   32% { color: #e74c3c; }
+   55% { color: #9b59b6; }
+   76% { color: #16a085; }
+   100% { color: #2ecc71; }
+}
+@keyframes color {
+ 0% { color: #f1c40f; }
+   32% { color: #e74c3c; }
+   55% { color: #9b59b6; }
+   76% { color: #16a085; }
+   100% { color: #2ecc71; }
+}
+.padding-left-50 {
+ padding-left: 50%;
+}
+.padding-left-30 {
+ padding-left: 30%;
+}
+.line-height {
+ line-height: 1;
+}
+h1 {
+ font-size: 268px;
+}
+.bars {
+ display: block;
+ position: relative;
+ border-radius: 20px;
+ margin-left: 25%;
+ height: 30px;
+ border-radius: 10px;
+}
+.is-2 {
+ width: 250px;
+}
+.color-yellow {
+ background-color: #f9de9a;
+}
+.color-blue {
+ background-color: #60b8ef;
+}
+.color-red {
+ background-color: #f8aba0;
+}
+.color-green {
+ background-color: #a6e38c;
+}
+
